Fix #34574: Empty Movie Clip Editor crash on select